--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
+	<link rel="stylesheet" type="text/css" href="css/main.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.transitions.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
-	<link rel="stylesheet" type="text/css" href="css/main.css"/>
-
-
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css"/>
 	
 </head>
 <body>
@@ -47,11 +45,6 @@
 	</header>
 	<!--  End Header Section  -->
 
-
-
-
-
-
 	<!--  Hero Section  -->
 	<section class="hero" id="hero">
 		<div class="container">
@@ -73,11 +66,6 @@
 	</section>
 	<!--  End Hero Section  -->
 
-
-
-
-
-
 	<!--  Featured On Section  -->
 	<section class="featured_on">
 		<div class="container">
@@ -98,10 +86,6 @@
 		</div>
 	</section>
 	<!--  End Featured On Section  -->
-
-
-
-
 
 
 	<!--  About Section  -->
@@ -152,10 +136,6 @@
 	<!--  End About Section  -->
 
 
-
-
-
-
 	<!--  App Features Section  -->
 	<section class="app_features" id="app_features">
 		<div class="container">
@@ -200,10 +180,6 @@
 	<!--  And App Features Section  -->
 
 
-
-
-
-
 	<!--  Testimonials Section  -->
 	<section class="testimonials animated wow fadeIn" id="testimonials" data-wow-duration="2s">
 		<div class="container">
@@ -246,11 +222,6 @@
 	</section>
 	<!--  End Testimonials Section  -->
 
-
-
-
-
-
 	<!--  Email Subscription Section  -->
 	<section class="sub_box">
 		<p class="cta_text animated wow fadeInDown">We're hiring. Join Our company!</p>
@@ -264,11 +235,6 @@
 		<div class="message" id="success_msg">Thank You For Your Subscription.</div>
 	</section>
 	<!--  End Email Subscription Section  -->
-
-
-
-
-
 
 	<!--  Footer Section  -->
 	<footer>
