Added Lazy loading to more images

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="row">
 				<div class="col-md-6 text-center animated wow fadeInLeft">
 					<div class="iphone">
-						<img src="img/iphone_.png" alt="" titl="">
+						<img loading="lazy" src="img/iphone_.png" alt="" titl="">
 					</div>
 				</div>
 				<div class="col-md-6 animated wow fadeInRight">
@@ -140,34 +140,34 @@
 
 			<div class="row text-center">
 				<div class="col-sm-4 col-md-4 details animated wow fadeInDown" data-wow-delay="0s">
-					<img src="img/f_icon1.png" alt="" title="">
+					<img loading="lazy" src="img/f_icon1.png" alt="" title="">
 					<h1 class="text-uppercase">malesuada fames turpis.</h1>
 					<p class="text-lowercase">vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
 				</div>
 				<div class="col-sm-4 col-md-4 details animated wow fadeInDown" data-wow-delay=".1s">
-					<img src="img/f_icon2.png" alt="" title="">
+					<img loading="lazy" src="img/f_icon2.png" alt="" title="">
 					<h1 class="text-uppercase">malesuada fames turpis.</h1>
 					<p class="text-lowercase">vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
 				</div>
 				<div class="col-sm-4 col-md-4 details animated wow fadeInDown" data-wow-delay=".2s">
-					<img src="img/f_icon3.png" alt="" title="">
+					<img loading="lazy" src="img/f_icon3.png" alt="" title="">
 					<h1 class="text-uppercase">malesuada fames turpis.</h1>
 					<p class="text-lowercase">vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col-sm-4 col-md-4 details animated wow fadeInDown" data-wow-delay="0s">
-					<img src="img/f_icon4.png" alt="" title="">
+					<img loading="lazy" src="img/f_icon4.png" alt="" title="">
 					<h1 class="text-uppercase">malesuada fames turpis.</h1>
 					<p class="text-lowercase">vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
 				</div>
 				<div class="col-sm-4 col-md-4 details animated wow fadeInDown" data-wow-delay=".1s">
-					<img src="img/f_icon5.png" alt="" title="">
+					<img loading="lazy" src="img/f_icon5.png" alt="" title="">
 					<h1 class="text-uppercase">malesuada fames turpis.</h1>
 					<p class="text-lowercase">vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
 				</div>
 				<div class="col-sm-4 col-md-4 details animated wow fadeInDown" data-wow-delay=".2s">
-					<img src="img/f_icon6.png" alt="" title="">
+					<img loading="lazy" src="img/f_icon6.png" alt="" title="">
 					<h1 class="text-uppercase">malesuada fames turpis.</h1>
 					<p class="text-lowercase">vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
 				</div>
@@ -238,13 +238,13 @@
 	<footer>
 		<ul class="list-unstyled list-inline app_platform">
 			<li class="animated wow fadeInDown" data-wow-delay="0s">
-				<a href=""><img src="img/android_icon.png" alt="" title=""></a>
+				<a href=""><img loading="lazy" src="img/android_icon.png" alt="" title=""></a>
 			</li>
 			<li class="animated wow fadeInDown" data-wow-delay=".1s">
-				<a href=""><img src="img/ios_icon.png" alt="" title=""></a>
+				<a href=""><img loading="lazy" src="img/ios_icon.png" alt="" title=""></a>
 			</li>
 			<li class="animated wow fadeInDown" data-wow-delay=".2s">
-				<a href=""><img src="img/windows_icon.png" alt="" title=""></a>
+				<a href=""><img loading="lazy" src="img/windows_icon.png" alt="" title=""></a>
 			</li>
 		</ul>
 		<p class="copyright animated wow fadeIn" data-wow-duration="2s"> <strong>Pixelhint</strong>
@@ -258,7 +258,6 @@
 	<script type="text/javascript" src="js/wow.js"></script>
 	<script type="text/javascript" src="js/parallax.js"></script>
 	<script type="text/javascript" src="js/nicescroll.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/scrollTo.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>	
 </body>
 </html>
